--- a/index.html
+++ b/index.html
@@ -45,358 +45,260 @@
 
 
 
-<h1 id="top" class="page-header">Indice</h1>
-
-    <ul>
-    <li><a href="#par1">Schema della lezione</a></li>
-    <li><a href="#par2">Il bilancio</a></li>
-    <li><a href="#ammortamento">Ammortamento</a></li>
-    </ul>
-
-
-
-
-
-<h1 class="page-header">Schema della lezione</h1>
-
-<div id="wow">
-
-<p>Il bilancio è un insieme dei documenti contabili che un'impresa deve redigere periodicamente, ai sensi di legge, allo scopo di perseguire il principio di verità ed accertare in modo chiaro, veritiero e corretto la propria situazione patrimoniale e finanziaria, al termine del periodo amministrativo di riferimento, nonché il risultato economico dell'esercizio stesso.</p>
-
-
-
-</div>
-<hr>
-
-
-<p>
-
-Il bilancio d'esercizio è un documento contabile, redatto (compilato) dagli amministratori, o da chi da essi incaricati, alla fine di ogni periodo amministrativo, che determina da una parte il risultato economico d'esercizio (reddito) e dall'altra la situazione patrimoniale e finanziaria dell'impresa alla fine del medesimo. 
-</p>
-
-<p>Dev'essere compilato secondo le norme previste:</p>
-<ul>
-  <li>dal codice civile (c.c);</li>
-  <li>dal testo unico delle imposte sui redditi (TUIR);</li>
-  <li>dai principi contabili.</li>
-</ul>
-
-
-
-
-
-<h1 class="page-header">Rendiconto finanziario</h1>
-<p>
-A partire dal 2016, il rendiconto finanziario è obbligatorio per tutte le imprese, tranne che per le società di persone, le micro-imprese e quelle che possono presentare il bilancio in forma abbreviata.</p>
-
-<p>Per questo è necessario mettere a punto criteri e strumenti per una lettura dei flussi monetari.</p>
-
-
-<p>attraverso il rendiconto finanziario si verificano quali gestioni aziendali hanno assorbito risorse finanziarie e quali le hanno incrementate.</p>
-
-<p>L'art. 2425-ter non prevede uno schema obbligatorio per il r.f.
-Si limita a prescrivere che deve risultare l'ammontare e la composizione delle dispobibilità liquide, all'inizio e alla fine dell'esercizio, i flussi finanziari derivanti dall'attività operativa, da quella di investimento, da quella di finanziamento, comprese le operazioni con i soci.</p>
-<p>Vi sono due metodi per redigere il documento</p>
-<ul>
-  <li>Metodo diretto (flussi monetari in entrata e uscita)</li>
-  <li>Metodo indiretto (utile + costi che non hanno generato uscite - rcavi che non hanno generato entrate)</li>
-</ul>
-
-<p>Non serve a controllare la liquidità generata o assorbita nel corso di un eservizio, perché è immediatamente verificabile con il confronto tra il saldo delle disponibilità di cassa e banca di due esercizi consecutivi, ma per spiegare i motivi per cui tale variazione si è sviluppata. Serve a comprendere il contributo che ciascuna area della gestione ha fornito per incremetare o diminuire i flussi finanziari</p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-
-
-
-
-
-
-<h1 id="par2" class="page-header">IL BILANCIO</h1>
-
-<p class="book">Al termine di ogni periodo amministrativo, tutte le imprese devono redigere il bilancio di esercizio, un documento contabile che deriva dalla contabilità aziendale e ha lo scopo di rappresentare il risultato economico e la situazione patrimoniale e finanziaria dell’impresa al termine dell’esercizio amministrativo.</p> 
-
-<p class="mine">
-<div id="wow">
-<p>  Quando si arriva al 31 dicembre:
-  cosa accade?</p>
- <p> Si devono fare i conti.</p>
-  <p>si deve stabilire se:</p>
-  <p>- abbiamo guadagnato e quanto</p>
-  <p>- abbiamo perso e quanto</p>
-
-<p>  Come lo possiamo fare?</p>
-  <p>Attraverso la contabilità.</p>
-  <p>Durante l'anno abbiamo registrato:</p>
-  <p>costi</p>
-  <p>ricavi</p>
-
-<p>  Esempi di costi:</p>
-  <p>- acquisto materie prime</p>
-  <p>- energia elettrica</p>
-  <p>- lavoro</p>
-  <p>- servizi di manutenzione</p>
-  <p>- imposte e tasse</p>
-<p>  - spese per consulenze</p>
-
-<p>  Esempi di ricavi:</p>
-
-
-<p>  - vendite di beni e servizi</p>
-
-  <p>Dalla differenza otteniamo</p>
-  <p>- utile</p>
-  <p>- o perdita</p>
-</div>
-
-<p>Facciamo un esempio</p>
-
-<pre>
-
-costi:
-materie prime   1.100 €
-energia el.       500 €
-telefono          300 €
-servizi man.      200 €
-consulenze        500 €
----------------------
-tot.costi d'es. 2.600 €
-
-ricavi:
-vendite beni    5.350 €
-
-Utile: _________
-</pre>
-
-Soffermiamoci un attimo sui costi.
-
-<div id="wow">
-<p>  I costi, però, a cosa si riferiscono?</p>
-<p>  Sono sempre costi che dobbiamo</p>
-<p>  inserire nel calcolo dell'utile?</p>
-<p>  No?</p>
-<p>  Perché non tutti i costi vanno</p>
-<p>  inseriti nel calcolo?</p>
-<p></p>
-<p>  Stiamo parlando di:</p>
-<p>  - costi di esercizio e</p>
-<p>  - costi pluriennali</p>
-<p>  ...</p>
-<p></p>
-<p>  Fate degli esempi.</p>
-</div>
-
-Ci sono quindi costi che si riferiscono a 
-materie prime già utilizzate, energia elettrica,
- consulenze già effettuate, interessi passivi già maturati,
- stipendi per lavori già effettuati che hanno
- contribuito alla produzione dell'esercizio e che
- non possono più contribuire alla produzione futura.
- Questi sono costi d'esercizio e vanno a far
- parte della formula per trovare l'utile:
-
- <pre class="centered">
-utile = ricavi d'esercizio - costi d'esercizio
- </pre>
-
-Molti dei costi che noi abbiamo rilevato, quindi,
-non faranno parte dei costi d'esercizio.
-Per esempio, le materie prime acquistate e non
-impiegate nella produzione che hanno ancora
-valore di mercato, non faranno parte dei 
-costi di esercizio dell'anno in corso, ma
-saranno rimandati all'esercizio futuro.
-
-
-
-Soffermiamoci, quindi, a fare delle considerazioni
-su questa importante voce del bilancio: le rimanenze in magazzino.
-<p>
-<div id="wow">
-<p>  Secondo la classificazione del Codice civile,
-le rimanenze includono:</
->
-<p>   materie prime, </p>
-<p>    sussidiarie </p>
-<p>    e di consumo, </p>
-<p>   i prodotti in corso di lavorazione</p>
-<p>    e semilavorati, </p>
-<p>   i lavori in corso su ordinazione, </p>
-<p>   i prodotti fini e merci, </p>
-<p>   gli acconti.</p>
-
-<p>Il magazzino è importante per le
-imprese mercantili e industriali</p>.
-
-<p>Valutazione</p>
-<p>Una volta scelto un metodo di valutazione,
-questo deve essere mantenuto anche negli
-esercizi successivi.
-Si potranno cambiare i criteri di
-valutazione solo se giustificati da
-motivi particolari preventivamente
-comunicati all'Agenzia delle entrate
-(art. 2423-bis del Codice civile).
-Questi motivi devono essere 
-riportati nella Nota integrativa, nella
-quale deve emergere anche l'influenza
-di questo cambiamento sulla situazione
-patrimoniale e sul conto economico.</p>
-</div>
-
-
-<pre>
-
-ottobre
-p.acquisto   p.vendita
-+ 3.500 €      -
-- 2.500      5.000 €
-
-novembre
-p.acquisto   p.vendita
-+ 3.500 €      -
-- 2.500      5.000 €
-
-dicembre
-p.acquisto   p.vendita
-+ 3.500 €      -
-- 2.500      5.000 €
-
-</pre>
-
-
-
-
-
-<p class="book">Per redigere il bilancio, l'impresa deve effettuare una serie di valutazioni e di rilevazioni contabili al fine di considerare tutte le operazioni e i processi ancora in via di svolgimento al termine dell'esercizio.</p>
-
-
-<pre>
-
-A) Valore della produzione
-B) Costi della produzione
-
-principio prudenza
-valore minore tra quello di 
-costo e realizzo
-
-Metodi:
-Costo medio ponderato
-FIFO
-LIFO
-
-</pre>
-
-
-<h1 id="ammortamento" class="page-header">Ammortamento</h1>
-<ul>
-<li><a href="#top">Top</a></li>
-</ul>
-
-  <p class="book">Un'impresa acquista macchinari per 20.000 €</p>
-<pre>
-vita utile:
- 6 anni
-
-valore di recupero: 
- 2.000 euro
-
-criterio di ammortamento:
- quote costanti
-</pre>
-
-Determinare:
-<div class="black">
-<ul>
-  <li>Valore da ammortizzare</li>
-  <li>Quota annua di ammortamento</li>
-  <li>Piano di ammortamento</li>
-</ul>
-</div>
-
-<pre>
-Costo storico?
-A quanto ammonta?
-Il costo storico è ...
-... [20.000]
-
-C'è un valore di recupero?
-Si...
-... a quanto ammonta?
-[2.000]
-
-L'impresa deve recuperare
-questo costo, si o no?
-[si]
-Con cosa lo recupera?
-[con le vendite]
-
-Deve recuperare tutto il costo,
-di 20.000 € in un anno...?
-No, perché...?
-Perché il bene dura 6 anni e
-quindi apporta il suo
-contributo alla produzione
-per 6 anni... allora io
-devo andare a spalmare il
-costo sui prodotti non di un
-anno, ma di ben 6 anni....
-infatti il costo andrà a
-incorporarsi non in 1000 prodotti,
-se ne produciamo 1000 all'anno,
-ma in 6.000 prodotti.
-
-Quindi io ogni anno vado
-a spalmare sui prodotti solo
-1/6 del costo...
-devo dividere 20.000 per 6?
-No...
-18.000 : 6
-perché se io alla fine penso
-di recuperare 2.000 euro, devo
-spalmare solo la differenza
-20.000 - 2.000
-quindi
-
-18.000 : 6 = 3.000
-
-ogni anno toglierò dai
-ricavi solo 3.000 euro
-per quanto riguarda i
-macchinari, perché
-il resto lo vado a 
-spalmare negli altri
-5 anni.
-
-Capito, quindi, perché
-i beni che durano più anni
-sono un costo solo
-per una frazione pari a
-1 diviso il numero degli anni
-in cui il bene viene utilizzato?
-
-In questo modo, un po' alla volta,
-recupererò il costo del bene e
-potrò poi comprarne uno nuovo
-alla fine dei 6 anni.
-
-</pre>
-
-
-Esercizio
-<pre>
-A) Valore della prod.           375.000
-B) Costi della prod.            .......
-    A-B                         210.000
-C) Proventi e oneri fin.         23.000
-  interessi attivi    ......
-  interessi passivi    9.000
-D) Rettifiche di val. di att.f.  -6.000
-
-<h1 class="page-header">Ratei e risconti</h1>
-
-Quanto
+  <table border="1" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="231" valign="top"><p align="center"><strong>ATTIVO</strong></p></td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>A) Crediti verso soci per    versamenti ancora dovuti </em></strong><br />
+      (di cui gi&agrave; richiamati x) </p></td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>Totale A</em></strong></p></td>
+    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
+    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>B) Immobilizzazioni con    separata indicazione di quelle concesse in locazione finanziaria</em></strong></p>
+        <p>I.    Immobilizzazioni immateriali:</p>
+      <ol>
+        <li>costi di    impianto e di ampliamento; </li>
+        <li>costi di    ricerca, di sviluppo e di pubblicit&agrave;; </li>
+        <li>diritti di    brevetto industriale e diritti di utilizzazione delle opere dell'ingegno;</li>
+        <li>concessioni,    licenze, marchi e diritti simili; </li>
+        <li>avviamento; </li>
+        <li>immobilizzazioni    in corso e acconti;</li>
+        <li>altre.</li>
+      </ol>
+      <p>&nbsp;</p>
+      <p>Totale I. </p></td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p>x</p>
+      <p align="center">x</p>
+      <p>x</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">x<br />
+        x<br />
+        </p>
+      <p align="center">x</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">x</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">X</p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p>II. Immobilizzazioni    materiali:</p>
+        <ol>
+          <li>terreni e    fabbricati; </li>
+          <li>impianti e    macchinario;</li>
+          <li>attrezzature    industriali e commerciali;</li>
+          <li>altri beni; </li>
+          <li>immobilizzazioni    in corso e acconti.</li>
+        </ol>
+      <p>Totale II. </p>
+    </td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">x<br />
+          x<br />
+          x<br />
+          x<br />
+          </p>
+        <p align="center">x</p>
+        <p align="center">X</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p>III. Immobilizzazioni finanziarie:<br />
+      &nbsp;<br />
+      1)&nbsp;    partecipazioni in:</p>
+        <ol>
+          <li>imprese controllate; </li>
+          <li>imprese collegate;</li>
+          <li>imprese controllanti;</li>
+          <li>altre imprese; </li>
+        </ol>
+      <p>&nbsp;</p>
+      <p>2)&nbsp;&nbsp;&nbsp;    crediti:</p>
+      <ol>
+        <li>verso imprese controllate; </li>
+        <li>verso imprese collegate; </li>
+        <li>verso controllanti; </li>
+        <li>verso altri; </li>
+      </ol>
+      <p>3)&nbsp;&nbsp;&nbsp; altri    titoli; </p>
+      <ol>
+        <li>azioni proprie, </li>
+      </ol>
+      <p>&nbsp;&nbsp; (valore    nominale complessivo x).<br />
+        &nbsp;<br />
+        Totale III. </p></td>
+    <td width="19" valign="top"><p>&nbsp;</p>
+        <p>&nbsp;</p>
+      <p align="center">x<br />
+        x<br />
+        x<br />
+        x</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">x<br />
+        x<br />
+        x<br />
+        x</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">x</p>
+      <p>&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">x</p>
+      <p align="center">x<br />
+      </p>
+      <p align="center">X</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>Totale Immobilizzazioni    (B)</em></strong></p></td>
+    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
+    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>C) Attivo circolante</em></strong><br />
+      &nbsp;<br />
+      I.    Rimanenze:</p>
+        <ol>
+          <li>materie prime,    sussidiarie e di consumo; </li>
+          <li>prodotti in    corso di lavorazione e semilavorati;</li>
+          <li>lavori in corso    su ordinazione;</li>
+          <li>prodotti finiti    e merci; </li>
+          <li>acconti.</li>
+        </ol>
+      <p>Totale I.</p>
+    </td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">&nbsp;</p>
+      <p align="center">x</p>
+      <p align="center">x<br />x<br />
+        x<br />
+        x</p>
+      <p align="center">X</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p>II. Crediti:<br />
+      &nbsp;</p>
+        <ol>
+          <li>verso clienti; </li>
+          <li>verso imprese controllate; </li>
+          <li>verso imprese collegate; </li>
+          <li>verso controllanti; </li>
+        </ol>
+      <p>4bis - crediti tributari<br />
+        4ter&nbsp; -    imposte anticipate<br />
+        5)&nbsp;&nbsp; verso    altri. </p>
+      <p>Totale&nbsp; II. </p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">x<br />
+        x<br />
+        x<br />
+        x<br />
+        </p>
+        <p align="center">x<br />
+        x<br />
+        x</p>
+      <p>X</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p>III. Attivit&agrave;    finanziarie che non costituiscono immobilizzazioni:<br />
+      &nbsp;</p>
+        <ol>
+          <li>partecipazioni    in imprese controllate;</li>
+          <li>partecipazioni    in imprese collegate;</li>
+          <li>partecipazioni    in imprese controllanti;</li>
+          <li>altre    partecipazioni;</li>
+          <li>azioni proprie, </li>
+        </ol>
+      <p>&nbsp; (valore    nominale complessivo x); <br />
+        6. altri titoli.</p>
+      <p>Totale III. </p></td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p>&nbsp;</p>
+      <p align="center">x<br />
+        x<br />
+        x<br />
+        x<br />
+      </p>
+      <p align="center">x</p>
+      <p align="center">&nbsp;</p>
+      <p align="center">x</p>
+      <p>&nbsp;</p>
+      <p>X </p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p>IV. Disponibilit&agrave;    liquide:</p>
+        <ol>
+          <li>depositi    bancari e postali; </li>
+          <li>assegni; </li>
+          <li>danaro e valori    in cassa.</li>
+        </ol>
+      <p>Totale&nbsp; IV. </p>
+    </td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p align="center">x<br />
+          x<br />
+          x</p>
+      <p>X</p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>Totale attivo circolante    (C)</em></strong></p></td>
+    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
+    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>D) Ratei e risconti</em></strong> </p>
+        <ol>
+          <li>disaggio su    prestiti</li>
+          <li>vari. </li>
+        </ol></td>
+    <td width="19" valign="top"><p>&nbsp;</p></td>
+    <td width="19" valign="top"><p align="center">&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>X</p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong><em>Totale D</em></strong></p></td>
+    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
+    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
+  </tr>
+  <tr>
+    <td width="231" valign="top"><p><strong>TOTALE ATTIVO</strong></p></td>
+    <td width="19" valign="top"><p><strong>&nbsp;</strong></p></td>
+    <td width="19" valign="top"><p align="center"><strong>X</strong></p></td>
+  </tr>
+</table>
+
+  
 
     <footer class="site-footer">
       
