--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   div       {display:block; color:lightblue; }
   .centered {text-align: center; }
   .black {color:darkblue;}
+  
+  .tableclassic {
+  color:black;
+  background:orange;}
 </style>
   
   <body>
@@ -45,7 +49,7 @@
 
 
 
-  <table border="1" cellspacing="0" cellpadding="0">
+  <table class="tableclassic" border="1" cellspacing="0" cellpadding="0">
   <tr>
     <td width="231" valign="top"><p align="center"><strong>ATTIVO</strong></p></td>
     <td width="19" valign="top"><p>&nbsp;</p></td>
