--- a/index.html
+++ b/index.html
@@ -49,258 +49,7 @@
 
 
 
-  <table class="tableclassic" border="1" cellspacing="0" cellpadding="0">
-  <tr>
-    <td width="231" valign="top"><p align="center"><strong>ATTIVO</strong></p></td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>A) Crediti verso soci per    versamenti ancora dovuti </em></strong><br />
-      (di cui gi&agrave; richiamati x) </p></td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>Totale A</em></strong></p></td>
-    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
-    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>B) Immobilizzazioni con    separata indicazione di quelle concesse in locazione finanziaria</em></strong></p>
-        <p>I.    Immobilizzazioni immateriali:</p>
-      <ol>
-        <li>costi di    impianto e di ampliamento; </li>
-        <li>costi di    ricerca, di sviluppo e di pubblicit&agrave;; </li>
-        <li>diritti di    brevetto industriale e diritti di utilizzazione delle opere dell'ingegno;</li>
-        <li>concessioni,    licenze, marchi e diritti simili; </li>
-        <li>avviamento; </li>
-        <li>immobilizzazioni    in corso e acconti;</li>
-        <li>altre.</li>
-      </ol>
-      <p>&nbsp;</p>
-      <p>Totale I. </p></td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p>x</p>
-      <p align="center">x</p>
-      <p>x</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">x<br />
-        x<br />
-        </p>
-      <p align="center">x</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">x</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">X</p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p>II. Immobilizzazioni    materiali:</p>
-        <ol>
-          <li>terreni e    fabbricati; </li>
-          <li>impianti e    macchinario;</li>
-          <li>attrezzature    industriali e commerciali;</li>
-          <li>altri beni; </li>
-          <li>immobilizzazioni    in corso e acconti.</li>
-        </ol>
-      <p>Totale II. </p>
-    </td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">x<br />
-          x<br />
-          x<br />
-          x<br />
-          </p>
-        <p align="center">x</p>
-        <p align="center">X</p>
-    </td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p>III. Immobilizzazioni finanziarie:<br />
-      &nbsp;<br />
-      1)&nbsp;    partecipazioni in:</p>
-        <ol>
-          <li>imprese controllate; </li>
-          <li>imprese collegate;</li>
-          <li>imprese controllanti;</li>
-          <li>altre imprese; </li>
-        </ol>
-      <p>&nbsp;</p>
-      <p>2)&nbsp;&nbsp;&nbsp;    crediti:</p>
-      <ol>
-        <li>verso imprese controllate; </li>
-        <li>verso imprese collegate; </li>
-        <li>verso controllanti; </li>
-        <li>verso altri; </li>
-      </ol>
-      <p>3)&nbsp;&nbsp;&nbsp; altri    titoli; </p>
-      <ol>
-        <li>azioni proprie, </li>
-      </ol>
-      <p>&nbsp;&nbsp; (valore    nominale complessivo x).<br />
-        &nbsp;<br />
-        Totale III. </p></td>
-    <td width="19" valign="top"><p>&nbsp;</p>
-        <p>&nbsp;</p>
-      <p align="center">x<br />
-        x<br />
-        x<br />
-        x</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">x<br />
-        x<br />
-        x<br />
-        x</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">x</p>
-      <p>&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">x</p>
-      <p align="center">x<br />
-      </p>
-      <p align="center">X</p>
-    </td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>Totale Immobilizzazioni    (B)</em></strong></p></td>
-    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
-    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>C) Attivo circolante</em></strong><br />
-      &nbsp;<br />
-      I.    Rimanenze:</p>
-        <ol>
-          <li>materie prime,    sussidiarie e di consumo; </li>
-          <li>prodotti in    corso di lavorazione e semilavorati;</li>
-          <li>lavori in corso    su ordinazione;</li>
-          <li>prodotti finiti    e merci; </li>
-          <li>acconti.</li>
-        </ol>
-      <p>Totale I.</p>
-    </td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">&nbsp;</p>
-      <p align="center">x</p>
-      <p align="center">x<br />x<br />
-        x<br />
-        x</p>
-      <p align="center">X</p>
-    </td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p>II. Crediti:<br />
-      &nbsp;</p>
-        <ol>
-          <li>verso clienti; </li>
-          <li>verso imprese controllate; </li>
-          <li>verso imprese collegate; </li>
-          <li>verso controllanti; </li>
-        </ol>
-      <p>4bis - crediti tributari<br />
-        4ter&nbsp; -    imposte anticipate<br />
-        5)&nbsp;&nbsp; verso    altri. </p>
-      <p>Totale&nbsp; II. </p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">x<br />
-        x<br />
-        x<br />
-        x<br />
-        </p>
-        <p align="center">x<br />
-        x<br />
-        x</p>
-      <p>X</p>
-    </td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p>III. Attivit&agrave;    finanziarie che non costituiscono immobilizzazioni:<br />
-      &nbsp;</p>
-        <ol>
-          <li>partecipazioni    in imprese controllate;</li>
-          <li>partecipazioni    in imprese collegate;</li>
-          <li>partecipazioni    in imprese controllanti;</li>
-          <li>altre    partecipazioni;</li>
-          <li>azioni proprie, </li>
-        </ol>
-      <p>&nbsp; (valore    nominale complessivo x); <br />
-        6. altri titoli.</p>
-      <p>Totale III. </p></td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p>&nbsp;</p>
-      <p align="center">x<br />
-        x<br />
-        x<br />
-        x<br />
-      </p>
-      <p align="center">x</p>
-      <p align="center">&nbsp;</p>
-      <p align="center">x</p>
-      <p>&nbsp;</p>
-      <p>X </p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p>IV. Disponibilit&agrave;    liquide:</p>
-        <ol>
-          <li>depositi    bancari e postali; </li>
-          <li>assegni; </li>
-          <li>danaro e valori    in cassa.</li>
-        </ol>
-      <p>Totale&nbsp; IV. </p>
-    </td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p align="center">x<br />
-          x<br />
-          x</p>
-      <p>X</p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>Totale attivo circolante    (C)</em></strong></p></td>
-    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
-    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>D) Ratei e risconti</em></strong> </p>
-        <ol>
-          <li>disaggio su    prestiti</li>
-          <li>vari. </li>
-        </ol></td>
-    <td width="19" valign="top"><p>&nbsp;</p></td>
-    <td width="19" valign="top"><p align="center">&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>X</p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong><em>Totale D</em></strong></p></td>
-    <td width="19" valign="top"><p><strong><em>&nbsp;</em></strong></p></td>
-    <td width="19" valign="top"><p align="center"><strong><em>X</em></strong></p></td>
-  </tr>
-  <tr>
-    <td width="231" valign="top"><p><strong>TOTALE ATTIVO</strong></p></td>
-    <td width="19" valign="top"><p><strong>&nbsp;</strong></p></td>
-    <td width="19" valign="top"><p align="center"><strong>X</strong></p></td>
-  </tr>
-</table>
+  <h1><a href="https://docs.google.com/presentation/d/1qVMBRomRsZMya89jNyD5NdovNyNpHFki1Z10Ufxgd8c/pub?start=false&loop=false&delayms=5000">4bs</a></h1>
 
   
 
