--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
   <h1>
     <a href="https://docs.google.com/presentation/d/1kyf2sSljp0KdSkorKoq7A-vb82tHWaWcINcv1qlQA90/pub?start=false&loop=false&delayms=3000">
-    4BE - BILANCIO
+    4BE - Introduzione al Bilancio
     </a>
   </h1>
 
 
    <h1>
     <a href="https://docs.google.com/presentation/d/1gWeI-zVqFdIAiTlPkgjdSivLOhX2D7vKalY966ztFug/pub?start=false&loop=false&delayms=3000">
-    5BE - BILANCIO
+    5BE - Business plan
     </a>   
   </h1> 
 
