--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
   
   
     <footer class="site-footer">
+  
+      <h1 class="project-name"><a href="https://docs.google.com/document/d/1nMrfcaxj2U2JDcR6XHoiYkW7hF9WugYA2Mpb-RQSu3g/pub">Business plan</a></h1>
+      
       
     </footer>
 
