create github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="header4 cid-qKdv1hkbgp mbr-parallax-background" id="header4-9">
+<section class="engine"><a href="https://mobirise.ws/e">best web design software</a></section><section class="header4 cid-qKdv1hkbgp mbr-parallax-background" id="header4-9">
 
     
 
@@ -100,9 +100,10 @@
     
 </section>
 
-<div id="custom-html-d" custom-code="true" data-rv-view="70">
+<div id="custom-html-d" custom-code="true" data-rv-view="70"><div class="media-container-column mbr-white col-md-8">
 <h4 id="quinta"></h4>
 <h5 id="quinta_txt"></h5>
+</div>
 
 
 
