create github pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p {
   font-size: 1.2em;
 }
 
-header {--background : url(http://ecomnewsmed.com/uploads/budget-algerie.jpg); width: 100%; height: auto; padding-top: 15%; padding-bottom: 15%; margin-bottom: 5%; color: #FFF; background: var(--background) no-repeat top right fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; } .title {padding: 4%; width: 80%; margin: 0 10% 0 10%; border: 1px solid #fff; font-family: 'Cardo'; } h2 {text-align: center; } hr {border-color: rgba(255, 165, 210,0.2); background-color: rgba(255, 165, 210,0.2); } footer hr {border-color: #f1f1f1; background-color: #f1f1f1; } .btn-circle {width: 75px; height: 75px; margin-top: 35%; -webkit-transition: background 0.4s ease-in-out; -moz-transition: background 0.4s ease-in-out; -o-transition: background 0.4s ease-in-out; transition: background 0.4s ease-in-out; color: #FFF; border-radius: 50% !important; background: rgba(0, 0, 0, 0.5); } .btn-circle:focus, .btn-circle:hover {color: #000; outline: none; box-shadow: none; background: rgba(255, 165, 210, 0.5); } .fa-angle-double-down {font-size: 55px; } section {font-family: 'Lora'; } #consuelo {width: 100%; height: auto; margin-left: 15%; border: 3px solid #d3d3d3; } #testimonial {background-color: #f1f1f1; padding: 4% 3% 4% 3%; margin-bottom: 5%; } #lpvolcano {width: 100%; } #lproses {width: 100%; } #lpvideo {width: 100%; height: auto; } #elsalvador, #therose, #thecouple {margin-bottom: 6%; } .film {color: #989898; } .fa-film {font-size: 200%; margin-bottom: 10%; } footer {font-size: 12px; color: #989898; } /* Medium devices (desktops and up) */ @media (min-width: 992px) {header {padding-top: 5%; } .btn-circle {margin-top: 10%; } .title {width: 50%; margin-left: 25%; } section {line-height: 30px; } .testimonial-right span {font-size: 40px; } .testimonial-right footer {font-size: 16px; } #consuelo {width: 50%; height: auto; } #lpvideo {height: 110%; } } </style> <!--BODY --> <header class="text-center"> <div> <div class="title"> <h2>Il Budget</h2> <br> <h6>Controllare l'impresa con il budget</h6> </div> </div> <a href="#bio" class="btn btn-circle"> <i class="fa fa-angle-double-down"></i> </a> </header>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+header {--background : url(https://cdn.allwallpaper.in/wallpapers/1920x1200/10299/japan-tokyo-cityscapes-city-night-1920x1200-wallpaper.jpg); width: 100%; height: auto; padding-top: 15%; padding-bottom: 15%; margin-bottom: 5%; color: #FFF; background: var(--background) no-repeat top right fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; } .title {padding: 4%; width: 80%; margin: 0 10% 0 10%; border: 1px solid #fff; font-family: 'Cardo'; } h2 {text-align: center; } hr {border-color: rgba(255, 165, 210,0.2); background-color: rgba(255, 165, 210,0.2); } footer hr {border-color: #f1f1f1; background-color: #f1f1f1; } .btn-circle {width: 75px; height: 75px; margin-top: 35%; -webkit-transition: background 0.4s ease-in-out; -moz-transition: background 0.4s ease-in-out; -o-transition: background 0.4s ease-in-out; transition: background 0.4s ease-in-out; color: #FFF; border-radius: 50% !important; background: rgba(0, 0, 0, 0.5); } .btn-circle:focus, .btn-circle:hover {color: #000; outline: none; box-shadow: none; background: rgba(255, 165, 210, 0.5); } .fa-angle-double-down {font-size: 55px; } section {font-family: 'Lora'; } #consuelo {width: 100%; height: auto; margin-left: 15%; border: 3px solid #d3d3d3; } #testimonial {background-color: #f1f1f1; padding: 4% 3% 4% 3%; margin-bottom: 5%; } #lpvolcano {width: 100%; } #lproses {width: 100%; } #lpvideo {width: 100%; height: auto; } #elsalvador, #therose, #thecouple {margin-bottom: 6%; } .film {color: #989898; } .fa-film {font-size: 200%; margin-bottom: 10%; } footer {font-size: 12px; color: #989898; } /* Medium devices (desktops and up) */ @media (min-width: 992px) {header {padding-top: 5%; } .btn-circle {margin-top: 10%; } .title {width: 50%; margin-left: 25%; } section {line-height: 30px; } .testimonial-right span {font-size: 40px; } .testimonial-right footer {font-size: 16px; } #consuelo {width: 50%; height: auto; } #lpvideo {height: 110%; } } </style> <!--BODY --> <header class="text-center"> <div> <div class="title"> <h2>Il Budget</h2> <br> <h6>Controllare l'impresa con il budget</h6> </div> </div> <a href="#bio" class="btn btn-circle"> <i class="fa fa-angle-double-down"></i> </a> </header>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
         <section id="elsalvador">
             <div class="container">
                 <div class="row">
@@ -53,7 +53,7 @@ Il budget è un documento che contiene i programmi aziendali annuali, redatti di
                     <div class="col-lg-2"></div>
                 </div> <!-- Third Row end -->
             </div> <!-- Container end -->
-        </section>        <section class="engine"><a href="https://mobirise.ws/c">best free website maker</a></section><!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        </section>        <section class="engine"><a href="https://mobirise.ws/c">best website maker</a></section><!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
         <section id="elsalvador">
             <div class="container">
                 <div class="row">
@@ -122,22 +122,13 @@ I costi standard
                     <div class="col-12 col-lg-8 text-justify">
                         <p>
 
-    Per quanto riguarda la previsione dei costi, il budget viene elaborato sulla base di costi standard, facendo rierimenti a livelli di efficienza aziendali ipotizzati.
-
-<br>Distinguiamo:
-
-</p><h2>standard ideali</h2>
-<p>
-Sono i costi che fanno rigerimento a un livello di efficienza massimo, privo di sprechi e tempi morti, che rappresenta tuttavia un traguardo non raggiungibile nella realtà operativa.
-</p>
-<p>
-  Costi definiti in considerazione di un livello ottimale di efficienza tecnico-produttiva (dove vorrei arrivare) dell'azienda o nei suoi rapporti economici esterni.</p>
-<h2>Standard ottenibili</h2>
-<p>
-Sono livelli di efficienza superiori a quelli correnti, ma inferiori a quelli ideali. Sono determinati escludendo solo gli sprechi e i tempi morti effettivamente eliminabili. Sono un traguardo raggiungibile, che incoraggia i dipendenti, mentre gli Standard ideali li demotivano, essendo troppo difficili da raggiungere.</p>
-<h2>Standar correnti</h2>
-<p>Fanno riferimento al livello di efficienza che si riscontra nell'azienda.</p>
-
+Per quanto riguarda la previsione dei costi, il budget viene elaborato sulla base di costi standard, facendo rierimenti a livelli di efficienza aziendali ipotizzati.
+            <br>Distinguiamo:
+    </p><ol>
+        <li>Standar ideali</li>
+        <li>Standard ottenibili</li>
+        <li>Standard correnti</li>
+    </ol>
                         <p></p>
                       </div>
                     <div class="col-lg-2"></div>
@@ -156,7 +147,7 @@ Sono livelli di efficienza superiori a quelli correnti, ma inferiori a quelli id
                 <div class="row">
                     <div class="col-12 col-lg-12">
                       <h2>
-Grazie per l'attenzione
+Standard ideali
                   </h2> <hr>
                     </div>
                 </div> <!-- First Row end -->
@@ -165,6 +156,89 @@ Grazie per l'attenzione
                     <div class="col-12 col-lg-8 text-justify">
                         <p>
 
+</p><p>Sono i costi che fanno rigerimento a un livello di efficienza massimo, privo di sprechi e tempi morti, che rappresenta tuttavia un traguardo non raggiungibile nella realtà operativa.</p>
+
+                        <p></p>
+                      </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Second Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                        <img id="lpvolcano" src="">
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Third Row end -->
+            </div> <!-- Container end -->
+        </section>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        <section id="elsalvador">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-12">
+                      <h2>
+Standard ottenibili
+                  </h2> <hr>
+                    </div>
+                </div> <!-- First Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8 text-justify">
+                        <p>
+</p><p>Sono livelli di efficienza superiori a quelli correnti, ma inferiori a quelli ideali. Sono determinati escludendo solo gli sprechi e i tempi morti effettivamente eliminabili. Sono un traguardo raggiungibile, che incoraggia i dipendenti, mentre gli Standard ideali li demotivano, essendo troppo difficili da raggiungere.</p>
+                        <p></p>
+                      </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Second Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                        <img id="lpvolcano" src="">
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Third Row end -->
+            </div> <!-- Container end -->
+        </section>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        <section id="elsalvador">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-12">
+                      <h2>
+Standar correnti
+                  </h2> <hr>
+                    </div>
+                </div> <!-- First Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8 text-justify">
+                        <p>
+</p><p>Fanno riferimento al livello di efficienza che si riscontra nell'azienda.</p>
+                        <p></p>
+                      </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Second Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                        <img id="lpvolcano" src="">
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Third Row end -->
+            </div> <!-- Container end -->
+        </section>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        <section id="elsalvador">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-12">
+                      <h2>
+Grazie per l'attenzione
+                  </h2> <hr>
+                    </div>
+                </div> <!-- First Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8 text-justify">
+                        <p>
+Arrivederci
                         </p>
                       </div>
                     <div class="col-lg-2"></div>
